Changed texts in 8088

--- a/hello-world-8088/index.html
+++ b/hello-world-8088/index.html
@@ -7,7 +7,7 @@
     <title>Hello World 8088</title>
 </head>
 <body>
-    <h1>Docker container! Port: 8088 (dev, GitHub)</h1>
+    <h1>Docker container! Port: 8088 (dev, GitHub, fixed)</h1>
 <p> 
   <div id="currentTime"></div>
 </p>
