--- a/hello-world-8880/index.html
+++ b/hello-world-8880/index.html
@@ -7,7 +7,7 @@
     <title>Hello World 8880</title>
 </head>
 <body>
-    <h1>Docker containerin sovellus! Portissa: 8880 (dev, Pasi, muokattu 20240110T10:15)</h1>
+    <h1>Docker containerin sovellus! Portissa: 8880 (dev, Pasi, testPublic)</h1>
 <p> 
   <div id="currentTime"></div>
 </p>
